--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="http://code.highcharts.com/2.3.5/highcharts.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+<script src="https://code.highcharts.com/2.3.5/highcharts.js"></script>
 <script src="closing.js"></script>
 <script src="volume.js"></script>
 
